Fix HTML structure and classnames

--- a/html/cv.html
+++ b/html/cv.html
@@ -33,24 +33,22 @@
                 </ul>
             </div>
         </nav>
-		<div class="content">
-			<button class="trigger"><i class="material-icons md-36 white">menu</i></button>
-		</div>
+		<button class="trigger"><i class="material-icons md-36 white">menu</i></button>
     </div>
-    <main class="main">
-        <section class="about">
+    <main>
+        <section class="about-section">
             <div class="banner">
                 <h2 class="bannerStyle">Om mig</h2>
             </div>
-            <p>Jag började min universitetskarriär på kandidatprogrammet i marina vetenskaper. Under min tid som marinvetenskaplig student utvecklade jag en passion för programmering och teknik. Jag har därför beslutat att byta spår och har sedan dess ägnat mig åt att läsa kurser, bygga egna projekt och har nu landat på programmet "Fullstack Javascript-utvecklare på Chas Academy. Jag har under den här tiden lärt mig flera programmeringsspråk, inklusive Javascript, HTML, CSS och Java. Allt för att bygga upp mina färdigheter inom programmering, för att förstå min potential och se vilka möjligheter som finns inom branchen. Mitt mål är att säkra en position inom programutveckling, där jag kan använda min tekniska kompetens och kreativitet för att vara med och skapa projekt som jag verkligen brinner för och som ger mig möjligheten att fortsätta utvecklas i min roll som utvecklare.</p>
+            <p class="about-me">Jag började min universitetskarriär på kandidatprogrammet i marina vetenskaper. Under min tid som marinvetenskaplig student utvecklade jag en passion för programmering och teknik. Jag har därför beslutat att byta spår och har sedan dess ägnat mig åt att läsa kurser, bygga egna projekt och har nu landat på programmet "Fullstack Javascript-utvecklare på Chas Academy. Jag har under den här tiden lärt mig flera programmeringsspråk, inklusive Javascript, HTML, CSS och Java. Allt för att bygga upp mina färdigheter inom programmering, för att förstå min potential och se vilka möjligheter som finns inom branchen. Mitt mål är att säkra en position inom programutveckling, där jag kan använda min tekniska kompetens och kreativitet för att vara med och skapa projekt som jag verkligen brinner för och som ger mig möjligheten att fortsätta utvecklas i min roll som utvecklare.</p>
         </section>
-        <section class="education">
+        <section class="education-section">
             <div class="banner">
                 <h2 class="bannerStyle">Utbildningar</h2>
             </div>
-            <div class=" cards edu"></div>
+            <div class="cards edu"></div>
         </section>
-        <section class="jobs">
+        <section class="job-section">
             <div class="banner">
                 <h2 class="bannerStyle">Jobb</h2>
             </div>
@@ -59,9 +57,9 @@
     </main>
     <footer>
         <div class="footer-links bannerStyle">
-            <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
-            <a href="mailto:emil.winberg@chasacademy.se"><img src="../images/Gmail_icon_(2020).svg.png" alt="Email"></a>
-            <a href="https://github.com/sbwinberg"><img src="../images/github-mark.svg" alt="GitHub"></a>
+            <a href="https://www.linkedin.com/in/emil-winberg-028965123/" target="_blank"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
+            <a href="mailto:emil.winberg@chasacademy.se" target="_blank"><img src="../images/Gmail_icon_(2020).svg.png" alt="Email"></a>
+            <a href="https://github.com/sbwinberg" target="_blank"><img src="../images/github-mark.svg" alt="GitHub"></a>
         </div>
     </footer>
     <script src="../js/cv.js" type="module"></script>
