--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-    <title>CV</title>
+    <meta name="description" content="Här är jag och SEO optimerar som du kan se, finns massa intressant om just mig här, ta en titt vetja">
+    <meta name="robots" content="follow, index">
+    <meta name="keywords" content="Emil Winberg, CV, Jobb, Tech, IT, Frontend, Backend, Fullstack">
+    <title>Best Homemade CV</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,9 +36,7 @@
                 </ul>
             </div>
         </nav>
-		<div class="content">
-			<button class="trigger"><i class="material-icons md-36 white">menu</i></button>
-		</div>
+		<button class="trigger"><i class="material-icons md-36 white">menu</i></button>
     </div>
     <main>
         <div class="profile-section">
@@ -56,9 +57,9 @@
                 <h2 class="bannerStyle">Projekt</h2>
             </div>
             <div class="wrapper">
-                <div class="media-scroller ms">
+                <div class="media-scroller">
                     <button class="carousel-button prev" id="left">&laquo;</button>
-                    <button class="carousel-button next" id="right">&raquo;</button>
+                    <button class="carousel-button next">&raquo;</button>
                     <div class="card media-element">
                         <div class="card-bg"></div>
                         <div class="card-content">
@@ -72,9 +73,9 @@
     </main>
     <footer>
         <div class="footer-links bannerStyle">
-            <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
-            <a href="mailto:emil.winberg@chasacademy.se" id="email"><img src="../images/Gmail_icon_(2020).svg.png" alt="Email"></a>
-            <a href="https://github.com/sbwinberg"><img src="../images/github-mark.svg" alt="GitHub"></a>
+            <a href="https://www.linkedin.com/in/emil-winberg-028965123/" target="_blank"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
+            <a href="mailto:emil.winberg@chasacademy.se" id="email" target="_blank"><img src="../images/Gmail_icon_(2020).svg.png" alt="Email"></a>
+            <a href="https://github.com/sbwinberg" target="_blank"><img src="../images/github-mark.svg" alt="GitHub"></a>
         </div>
     </footer>
     <script src="../js/home.js" type="module"></script>
