--- a/html/contact.html
+++ b/html/contact.html
@@ -33,9 +33,7 @@
                 </ul>
             </div>
         </nav>
-		<div class="content">
-			<button class="trigger"><i class="material-icons md-36 white">menu</i></button>
-		</div>
+		<button class="trigger"><i class="material-icons md-36 white">menu</i></button>
     </div>
     <main>
         <section class="contact-section">
@@ -47,8 +45,8 @@
                     <p><img src="../images/icons8-phone-50.png" alt="phone icon">(+46)491 570 006</p>
                     <p><img src="../images/icons8-email-100.png" alt="email icon">emil.winberg@chasacademy.se</p>
                     <p><img src="../images/icons8-location-50.png" alt="location icon">123 ELF ROAD, NORTH POLE</p>
-                    <a href=""><img src="../images/icons8-linkedin-50.png" alt="phone icon">LINKEDIN</a>
-                    <a href=""><img src="../images/icons8-github-50.png" alt="phone icon">GITHUB</a>
+                    <a href="https://www.linkedin.com/in/emil-winberg-028965123/" target="_blank"><img src="../images/icons8-linkedin-50.png" alt="phone icon">LINKEDIN</a>
+                    <a href="https://github.com/sbwinberg" target="_blank"><img src="../images/icons8-github-50.png" alt="phone icon">GITHUB</a>
                 </div>
                 <div id="map-container">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d154074.6807563736!2d-147.56660312322597!3d64.74414054085969!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x51324d51d5c5f2b9%3A0xda1a7714d9d98964!2sNorth%20Pole%2C%20Alaska%2C%20Alaska%2099705%2C%20USA!5e0!3m2!1ssv!2sse!4v1698833814607!5m2!1ssv!2sse" class="map" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -62,7 +60,7 @@
             </div>
             <form action="#" id="message-form">
                 <input type="text" id="name" name="name" maxlength="40" placeholder="För- och Efternamn">
-                <input type="email" id="email" name="email" maxlength="40" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                <input type="email" id="email" name="email" maxlength="40" placeholder="Email" pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}$">
                 <textarea name="message" id="message" cols="30" rows="10" form="message-form" placeholder="Meddelande..."></textarea>
                 <input type="submit" value="Skicka" id="submit-button" form="message-form">
             </form>
@@ -70,9 +68,9 @@
     </main>
     <footer>
         <div class="footer-links bannerStyle">
-            <a href="https://www.linkedin.com/in/emil-winberg-028965123/"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
-            <a href="mailto:emil.winberg@chasacademy.se"><img src="../images/Gmail_icon_(2020).svg.png" alt="Email"></a>
-            <a href="https://github.com/sbwinberg"><img src="../images/github-mark.svg" alt="GitHub"></a>
+            <a href="https://www.linkedin.com/in/emil-winberg-028965123/" target="_blank"><img src="../images/iconmonstr-linkedin-3.svg" alt="Linked-in"></a>
+            <a href="mailto:emil.winberg@chasacademy.se" target="_blank"><img src="../images/Gmail_icon_(2020).svg.png" alt="Email"></a>
+            <a href="https://github.com/sbwinberg" target="_blank"><img src="../images/github-mark.svg" alt="GitHub"></a>
         </div>
     </footer>
 
